cargo-features = ["edition2021"]

[package]
name = "custard-macros"
version = "0.1.0"
authors = ["Ashlotl <thesupremeliverwurst@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
libloading = { version = "0.7.0" }
ron = { version = "0.6.4" }
quote = "1.0.9"
syn = "1.0.74"
walkdir = "2.3.2"